--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,12 +4,23 @@
     <string name="genre1_genre2_genre3">genre1 | genre2 | genre3</string>
     <string name="movie_release_date">29/01/2001</string>
     <string name="movie_backdrop">Movie Backdrop</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="home">Home</string>
     <string name="favorite">Favorites</string>
     <string name="setting">Setting</string>
-    <string name="favorite_tab">fragment_favorite_tab</string>
-    <string name="home_tab">fragment_home_tab</string>
-    <string name="setting_tab">fragment_setting_tab</string>
+    <string name="favorite_tab">Favorites</string>
+    <string name="home_tab">Home</string>
+    <string name="setting_tab">Setting</string>
+    <string name="save">Save</string>
+    <string name="add_new_list">Add new favorite list</string>
+    <string name="hint">Name of list...</string>
+    <string name="cancel">cancel</string>
+    <string name="add">add</string>
+    <string name="add_movie_to">Add movie to...</string>
+    <string name="create_new_list">Create new list</string>
+
+    <!--Language Setting-->
+    <string name="language">Language</string>
+    <string name="selectedLang">English</string>
+    <string name="others"></string>
 </resources>
